--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-a {
+a:hover {
     color: hotpink;
 }
 
@@ -10,9 +10,14 @@ h1 {
     border-radius: 10px;
     margin: 20px;
     border-style: dotted;
+    max-width: 50px;
+    max-height: 50px;
 }
 
-.myClass{
+.myDiv{
     border-style: double;
     border-radius: 5px;
+    height: 300px;
+    width: 300px;
+    border: solid black 2px;
 }
